smi-test/trafficAccess/01-install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuttl-test-stage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a-deployment
  namespace: kuttl-test-stage
  labels:
    app: app-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      serviceAccountName: service-a
      containers:
      - name: app-a
        image: layer5/learn-layer5:latest
        ports:
        - containerPort: 9091
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b-deployment
  namespace: kuttl-test-stage
  labels:
    app: app-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      serviceAccountName: service-b
      containers:
      - name: app-b
        image: layer5/learn-layer5:latest
        ports:
        - containerPort: 9091
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-c-deployment
  namespace: kuttl-test-stage
  labels:
    app: app-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-c
  template:
    metadata:
      labels:
        app: app-c
    spec:
      serviceAccountName: service-c
      containers:
      - name: app-c
        image: layer5/learn-layer5:latest
        ports:
        - containerPort: 9091
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: app-a
  namespace: kuttl-test-stage
spec:
  type: NodePort
  selector:
    app: app-a
  ports:
  - name: http
    protocol: TCP
    port: 9091
    targetPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: app-b
  namespace: kuttl-test-stage
spec:
  type: NodePort
  selector:
    app: app-b
  ports:
  - name: http
    protocol: TCP
    port: 9091
    targetPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: app-c
  namespace: kuttl-test-stage
spec:
  type: NodePort
  selector:
    app: app-c
  ports:
  - name: http
    protocol: TCP
    port: 9091
    targetPort: 9091
