smi-test/trafficAccess/03-allow.yaml
# TCPRoute for Counting Service
---
apiVersion: specs.smi-spec.io/v1alpha1
kind: TCPRoute
metadata:
  name: service-tcp-route

# TrafficTarget defines allowed routes for service-a
# In this example service-a is allowed to connect using
# TCP
---
kind: TrafficTarget
apiVersion: access.smi-spec.io/v1alpha1
metadata:
  name: service-targets
  namespace: default
destination:
  kind: ServiceAccount
  name: service-b
  namespace: default
sources:
- kind: ServiceAccount
  name: service-a
  namespace: default
specs:
- kind: TCPRoute
  name: service-tcp-route
